--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = cj-mills
 
 ### Optional ###
-requirements = cjm-plugin-system cjm-graph-plugin-system cjm-graph-domains python-fasthtml cjm-fasthtml-app-core cjm-fasthtml-daisyui cjm-fasthtml-interactions cjm-fasthtml-settings cjm_fasthtml_lucide_icons cjm_fasthtml_keyboard_navigation cjm_fasthtml_card_stack cjm_workflow_state cjm_source_provider cjm_transcript_source_select
+requirements = cjm-plugin-system cjm-graph-plugin-system cjm-graph-domains python-fasthtml cjm-fasthtml-app-core cjm-fasthtml-daisyui cjm-fasthtml-tailwind cjm-fasthtml-interactions cjm-fasthtml-settings cjm_fasthtml_lucide_icons cjm_fasthtml_keyboard_navigation cjm_fasthtml_card_stack cjm_workflow_state cjm_source_provider cjm_transcript_source_select cjm_transcript_segmentation cjm_transcript_vad_align
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
