Integrate cjm-fasthtml-web-audio library with multi-buffer support, boundary indicators, source stats, and updated audio controls.

--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = cj-mills
-requirements = cjm-plugin-system cjm-graph-plugin-system cjm-graph-domains python-fasthtml cjm-fasthtml-app-core cjm-fasthtml-daisyui cjm-fasthtml-tailwind cjm-fasthtml-interactions cjm-fasthtml-settings cjm_fasthtml_lucide_icons cjm_fasthtml_keyboard_navigation cjm_fasthtml_card_stack cjm_workflow_state cjm_source_provider cjm_transcript_source_select cjm_transcript_segmentation cjm_transcript_vad_align
+requirements = cjm-plugin-system cjm-graph-plugin-system cjm-graph-domains python-fasthtml cjm-fasthtml-app-core cjm-fasthtml-daisyui cjm-fasthtml-tailwind cjm-fasthtml-interactions cjm-fasthtml-settings cjm_fasthtml_lucide_icons cjm_fasthtml_keyboard_navigation cjm_fasthtml_card_stack cjm_workflow_state cjm_source_provider cjm_transcript_source_select cjm_transcript_segmentation cjm_transcript_vad_align cjm_fasthtml_web_audio
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
